magi/static/less/mixins/navbar-variant.less
// This file is derived from https://github.com/twbs/bootstrap/blob/master/less/navbar.less

.navbar-variant(@navbar-inverse-bg, @navbar-inverse-color) {
    @navbar-inverse-border: darken(@navbar-inverse-bg, 10%);
    @navbar-inverse-link-color: lighten(@navbar-inverse-color, 20%);
    @navbar-inverse-link-hover-color: @navbar-inverse-color;
    @navbar-inverse-link-hover-bg: transparent;
    @navbar-inverse-link-active-color: @navbar-inverse-link-hover-color;
    @navbar-inverse-link-active-bg: darken(@navbar-inverse-bg, 10%);
    @navbar-inverse-link-disabled-color: @navbar-inverse-bg;
    @navbar-inverse-link-disabled-bg: transparent;
    @navbar-inverse-brand-color: @navbar-inverse-link-color;
    @navbar-inverse-brand-hover-color: @navbar-inverse-color;
    @navbar-inverse-brand-hover-bg: transparent;
    @navbar-inverse-toggle-hover-bg: @navbar-inverse-bg;
    @navbar-inverse-toggle-icon-bar-bg: @navbar-inverse-color;
    @navbar-inverse-toggle-border-color: @navbar-inverse-bg;

    background-color: @navbar-inverse-bg;
    border-color: @navbar-inverse-border;

    .navbar-brand {
	color: @navbar-inverse-brand-color;
        &:hover,
	&:focus {
	    color: @navbar-inverse-brand-hover-color;
	    background-color: @navbar-inverse-brand-hover-bg;
	}
    }

    .navbar-text {
	color: @navbar-inverse-color;
    }

    .navbar-nav {
	> li > a {
            color: @navbar-inverse-link-color;

	    &:hover,
            &:focus {
	        color: @navbar-inverse-link-hover-color;
		background-color: @navbar-inverse-link-hover-bg;
	    }
	}
	> .active > a {
	    &,
	    &:hover,
	    &:focus {
		color: @navbar-inverse-link-active-color;
		background-color: @navbar-inverse-link-active-bg;
	    }
	}
	> .disabled > a {
	    &,
	    &:hover,
	    &:focus {
		color: @navbar-inverse-link-disabled-color;
		background-color: @navbar-inverse-link-disabled-bg;
	    }
	}
    }

    // Darken the responsive nav toggle
    .navbar-toggle {
        border-color: @navbar-inverse-toggle-border-color;
	&:hover,
	&:focus {
	    background-color: @navbar-inverse-toggle-hover-bg;
	}
	.icon-bar {
	    background-color: @navbar-inverse-toggle-icon-bar-bg;
	}
    }

    .navbar-collapse,
    .navbar-form {
        border-color: darken(@navbar-inverse-bg, 7%);
    }

    // Dropdowns
    .navbar-nav {
        > .open > a {
	    &,
	    &:hover,
	    &:focus {
		background-color: @navbar-inverse-link-active-bg;
		color: @navbar-inverse-link-active-color;
	    }
	}

	@media (max-width: 768px) {
            // Dropdowns get custom display
	    .open .dropdown-menu {
		> .dropdown-header {
		    border-color: @navbar-inverse-border;
		}
		.divider {
		    background-color: @navbar-inverse-border;
		}
		> li > a {
		    color: @navbar-inverse-link-color;
		    &:hover,
		    &:focus {
			color: @navbar-inverse-link-hover-color;
			background-color: @navbar-inverse-link-hover-bg;
		    }
		}
		> .active > a {
		    &,
		    &:hover,
		    &:focus {
			color: @navbar-inverse-link-active-color;
			background-color: @navbar-inverse-link-active-bg;
		    }
		}
		> .disabled > a {
		    &,
		    &:hover,
		    &:focus {
			color: @navbar-inverse-link-disabled-color;
			background-color: @navbar-inverse-link-disabled-bg;
		    }
		}
	    }
	}
    }

    .navbar-link {
	color: @navbar-inverse-link-color;
        &:hover {
	    color: @navbar-inverse-link-hover-color;
	}
    }

    .btn-link {
	color: @navbar-inverse-link-color;
        &:hover,
	&:focus {
	    color: @navbar-inverse-link-hover-color;
	}
	&[disabled],
	fieldset[disabled] & {
	    &:hover,
	    &:focus {
		color: @navbar-inverse-link-disabled-color;
	    }
	}
    }
    .dropdown-menu>.active>a, .dropdown-menu>.active>a:focus,
    .dropdown-menu>.active>a:hover {
	background-color: @navbar-inverse-bg;
	color: @navbar-inverse-color;
    }
    @media (max-width: 768px) {
	.dropdown-menu>li>a {
	    color: @navbar-inverse-color;
	}
    }
}

